set timezone to shanghai

--- a/8/jdk/Dockerfile
+++ b/8/jdk/Dockerfile
@@ -80,3 +80,7 @@ RUN set -ex && \
     echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf
 
 # EOF
+
+# 设置时区
+RUN apk add -U tzdata
+ENV TZ=Asia/Shanghai
